--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,12 @@ body.light-theme {
   list-style: none;
   display: flex;
   gap: 1.5rem;
+  margin-left: 700px;
 }
 .navbar .nav-links a {
   text-decoration: none;
   color: white;
+  font-size: 20px;
   font-weight: 500;
   transition: color 0.3s;
 }
@@ -99,8 +101,11 @@ body.light-theme {
   font-size: 1.5rem;
   margin-bottom: 1rem;
 }
-.highlight {
+.highlight1{
   color: var(--primary-color);
+}
+.highlight{
+  color: #008080;
 }
 .btn {
   display: inline-block;
@@ -165,8 +170,10 @@ body.light-theme {
 .section h2 {
   font-size: 2rem;
   margin-bottom: 1rem;
+  text-align: center;
   text-decoration: underline;
   text-decoration-color: #8b5cf6;
+  color:  #008080;
   
 }
 .section ul {
@@ -174,8 +181,8 @@ body.light-theme {
   line-height: 1.7;
 }
 #inside-about{
-  margin-left: 60px;
-  margin-right: 20px;
+  margin-left: 7%;
+  margin-right: 7%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 3vmin;
 }
@@ -228,7 +235,6 @@ body.light-theme {
   gap: 5px;
 }
 
-
 /* Contact Form (Horizontal Layout on Desktop) */
 .contact-horizontal {
   display: flex;
@@ -276,15 +282,82 @@ body.light-theme {
   .hero-section {
     flex-direction: column;
     text-align: center;
+    
+  }
+  .hero-left h2{
+    font-size: 1.3rem;
+  }
+  .hero-left h1{
+    font-size: 2rem;
+  }
+  .hero-left h3{
+    font-size: 1rem;
+  }
+  .btn{
+    margin-right: 18px;
+    padding: 6px 12px;
+    font-size: 16px;
+  }
+  .social-icons{
+    margin-top: auto;
+    justify-content: center;
+    align-items: center;
+  }
+  .social-icons a{
+    font-size: 1.5rem;
   }
   .hero-right {
     margin-top: 2rem;
   }
-  .navbar .nav-links {
-    flex-direction: column;
-    gap: 1rem;
+  .hero-right .avatar-container {
+    width: 200px;
+    height: 200px;
+}
+.address h2{
+  font-size: 18px;
+}
+  .navbar {
+    flex-direction: row;
+    align-items: flex-start;
   }
-  .contact-form {
+  .navbar .logo {
+    width: 100%;
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+  }
+  #themeSwitch {
+    align-self: auto;
+  }
+  .navbar .nav-links {
+    display: none;
+  }
+  .section h2 {
+  font-size: 1.2rem;
+  margin-bottom: 1rem; 
+  }
+  .skill-box h3 {
+  font-size: 1rem;
+  }
+  .skill-box ul{
+  font-size: 0.8rem;
+  }
+  .project h3{
+  font-size: 1.2rem;
+}
+.project h4{
+  margin-left: 16px;
+  margin-top: 5px;
+  font-size: 1rem;
+}
+.project-description{
+  margin-left: 24px;
+  margin-top: 10px;
+  gap: 2px;
+  font-size: 0.8rem;
+}
+
+
+    .contact-form {
     flex-direction: column;
     gap: 1rem;
   }
